--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "~5.8|6.*",
-        "illuminate/container": "~5.8|6.*",
-        "illuminate/console": "5.8|6.*",
+        "illuminate/support": "6.*",
+        "illuminate/container": "6.*",
+        "illuminate/console": "6.*",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
